[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Enemy/EnemyOne.gd" type="Script" id=1]
[ext_resource path="res://Particles/ExplosionParticles.tres" type="Material" id=2]
[ext_resource path="res://Sprites/EnemyOne.png" type="Texture" id=3]
[ext_resource path="res://Sprites/EnemyRocket.png" type="Texture" id=4]
[ext_resource path="res://Sounds/Explosion.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 30, 60, 30 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 60, 30, 60, 30 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 0, 10, 0 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 1000, 0, 0 )
initial_velocity = 333.33
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 10.0
scale_random = 0.25
color = Color( 0.521569, 0.188235, 0.188235, 1 )

[node name="EnemyOne" type="KinematicBody2D"]
collision_layer = 2147483648
collision_mask = 0
script = ExtResource( 1 )

[node name="Ship" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Rocket" type="AnimatedSprite" parent="."]
position = Vector2( 55.6009, -5.92394 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 3 )
animation = "Idle"
frame = 1
playing = true

[node name="RocketParticles" type="Particles2D" parent="."]
position = Vector2( 33.3354, -5.95275 )
z_index = -10
amount = 2
lifetime = 0.5
explosiveness = 0.13
process_material = SubResource( 4 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
emitting = false
amount = 20
one_shot = true
speed_scale = 2.0
explosiveness = 0.74
local_coords = false
process_material = ExtResource( 2 )

[node name="CollisionArea" type="Area2D" parent="."]
z_index = -1
collision_layer = 4
collision_mask = 3

[node name="HitBox" type="CollisionPolygon2D" parent="CollisionArea"]
visible = false
polygon = PoolVector2Array( 44.5276, -39.6693, 33.8248, -39.372, 33.8248, -28.3719, 22.8246, -28.3719, 22.8246, -17.3717, -44.3656, -17.3717, -44.3656, -6.37155, -34.2573, -6.07425, -34.2573, 4.33131, -10.7705, 4.92592, -10.7705, 16.818, 10.9325, 16.818, 11.2298, 27.8182, 33.2302, 27.8182, 33.5275, 38.8183, 45.1222, 39.1156, 44.8249, 16.818, 33.8248, 16.2234, 33.5275, -16.7771, 45.1222, -16.7771 )

[node name="Notifier" type="VisibilityNotifier2D" parent="."]

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="screen_exited" from="Notifier" to="." method="_on_Notifier_screen_exited"]
